card overflow scroll to fix responsive table issue

--- a/src/utils/_card.scss
+++ b/src/utils/_card.scss
@@ -5,6 +5,7 @@
   border-radius: var(--radius);
   background: var(--cardBackground);
   box-shadow: var(--cardShadow);
+  overflow-x: auto;
 }
 
 .card > *:first-child {
